ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: production
  annotations:
spec:
  rules:
  - host: fiardika.fiardika.xyz
    http:
      paths:
        - backend:
            serviceName: landing-page-service
            servicePort: 80
